--- a/vignettes/div05.bib
+++ b/vignettes/div05.bib
@@ -120,6 +120,18 @@
   file = {F:\\Work\\library\\paper\\Kattge et al_2011_TRY – a global database of plant traits.pdf;D:\\Zotero\\storage\\5D7FD4T2\\abstract.html}
 }
 
+@article{pebesma16,
+  author = {Edzer Pebesma and Thomas Mailund and James Hiebert},
+  title = {{Measurement Units in R}},
+  year = {2016},
+  journal = {{The R Journal}},
+  doi = {10.32614/RJ-2016-061},
+  url = {https://doi.org/10.32614/RJ-2016-061},
+  pages = {486--494},
+  volume = {8},
+  number = {2}
+}
+
 @article{allan15,
   langid = {english},
   title = {Land Use Intensification Alters Ecosystem Multifunctionality via Loss of Biodiversity and Changes to Functional Composition},
